--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@fastify/jwt": "^9.0.0",
     "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
-    "fastify": "^5.0.0"
+    "dotenv": "^16.4.7",
+    "fastify": "^5.0.0",
+    "mercadopago": "^2.3.0"
   },
   "devDependencies": {
     "prisma": "^5.19.1"
